# Tanaji

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py  main.py
api/auth/: __init__.py  jwt.py
api/routers/: __init__.py  auth.py  users.py
database/: __init__.py  models.py  session.py
database/migrations/: env.py  script.py.mako
shared/: __init__.py  config.py
ui/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts
ui/src/components/: Layout.tsx
ui/src/hooks/: useAuth.tsx
ui/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
